--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,11 @@ android {
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-       ndk {
-           abiFilters 'armeabi-v7a'
-           abiFilters 'arm64-v8a'
-           abiFilters 'x86'
-       }
+//       ndk {
+//           abiFilters 'armeabi-v7a'
+//           abiFilters 'arm64-v8a'
+//           abiFilters 'x86'
+//       }
     }
 
 //    splits {
