--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,21 +33,26 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
     dexOptions {
         javaMaxHeapSize "4g"
     }
+
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
         }
     }
+    
     repositories {
         flatDir {
             dirs 'libs'
@@ -57,7 +62,6 @@ android {
 
 dependencies {
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
@@ -90,7 +94,7 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
-    // Activity KTX for viewModels()
+    // Extensions for Kotlin
     implementation "androidx.activity:activity-ktx:1.3.1"
 
     //Dagger - Hilt
