--- a/.github/workflows/ci_android.yml
+++ b/.github/workflows/ci_android.yml
@@ -2,12 +2,10 @@ name: Build (Android)
 
 on:
   push:
-    paths:
-      - '**'
+     branches: [ master ]
   pull_request:
-    paths:
-      - '**'
-
+    branches: [ master ]
+    
 jobs:
   build:
     
