--- a/.github/workflows/ci_android.yml
+++ b/.github/workflows/ci_android.yml
@@ -2,36 +2,26 @@ name: Build (Android)
 
 on:
   push:
-     branches: [ master ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
-    
+
 jobs:
   build:
-    
-    name: Build Android
+
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: set up JDK 12
-      uses: actions/setup-java@v2
-      with:
-        java-version: '12'
-        distribution: 'adopt'
-        
-    - name: Cache Gradle and wrapper
-      uses: actions/cache@v2
-      with:
-        path: |
-          ~/.gradle/caches
-          ~/.gradle/wrapper
-        key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
-        restore-keys: |
-          ${{ runner.os }}-gradle-
+      - uses: actions/checkout@v2
+      - name: set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+          cache: gradle
 
-    - name: Grant Permission to Execute
-      run: chmod +x gradlew
-      
-    - name: 🏗 Build with Gradle 🛠️
-      run: ./gradlew build
+      - name: Grant Permission to Execute
+        run: chmod +x gradlew
+
+      - name: 🏗 Build with Gradle 🛠️
+        run: ./gradlew build
