--- a/.github/workflows/ci_android.yml
+++ b/.github/workflows/ci_android.yml
@@ -13,12 +13,22 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
-          cache: gradle
+
+      - name: Cache gradle
+        uses: actions/cache@v2.1.6
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
 
       - name: Grant Permission to Execute
         run: chmod +x gradlew
